<resources>
    <string name="app_name">Tuim</string>
    <string name="TextToLogIn">Zaloguj się</string>
    <string name="logging">Logowanie</string>
    <string name="registering">Rejstracja</string>
    <string name="logInAndConfirm">Zaloguj się i potwierdz</string>
    <string name="give_login">Login</string>
    <string name="give_password">Haslo</string>
    <string name="Confirm">Potwierdz</string>
    <string name="main_menu">Menu głowne</string>
    <string name="your_points">Twoje punkty</string>
    <string name="new_gps">Znajdz stacje benzynowa</string>
    <string name="new_tank">Nowa stacja</string>
    <string name="new_car">Nowy samochód</string>
    <string name="new_repair">Ustawienia</string>
    <string name="log_in_form">Logowanie</string>
    <string name="enter_login">Wprowadz login</string>
    <string name="enter_password">Wprowadz haslo</string>
    <string name="login_or_passworrd_not_correct">Bledny login lub haslo</string>
    <string name="error_connection_with_server">Blad polaczenia z serwerem</string>
    <string name="register_form">Rejestracja</string>
    <string name="error">Blad!</string>
    <string name="you_have_to_accept_regulations">Akceptacja regulamianu jest wymagana</string>
    <string name="checkboxRegulations">Zatwierdzono</string>
    <string name="phone_number_is_necessary">Numer terlefonu jest wymagany</string>
    <string name="phone_number_only_nine_numbers">Numer telefonu wymaga 9 cyfr</string>
    <string name="give_phone_number">Podaj numer telefonu</string>
    <string name="email_is_necessary">Email jest wymagany</string>
    <string name="false_email">Niepoprawny mail</string>
    <string name="give_email">Podaj email</string>
    <string name="must_repeat_password">Prosze powtorzyc haslo</string>
    <string name="password_dont_match">Brak zgodanosci hasla</string>
    <string name="repeat_password">Powtorz haslo</string>
    <string name="password_is_necessary">Haslo jest wymagane</string>
    <string name="password_eight_signs_leter_number_special">Haslo musi zawierac coanajmniej 8 znaków, w tym znak specjalny litere i cyfre</string>
    <string name="login_is_necessary">Login jest wymagany</string>
    <string name="login_must_more_than_three_signs">Login musi zawiwerac wiecej niz 3 znaki</string>
    <string name="make">Marka</string>
    <string name="model">Model</string>
    <string name="color">Kolor</string>
    <string name="is_it_your_main_car">Czy to Twoje glowne auto?</string>
    <string name="color_demo">Kolor</string>
    <string name="model_demo">Model</string>
    <string name="make_demo">Marka</string>
    <string name="confirm_to_verifiaction">Potwierdz weyfikacje</string>
    <string name="get_points_for_editing">Otrzymaj punkty</string>
    <string name="new_price_lpg">Nowa cena gazu</string>
    <string name="new_price_on">Nowa cena disel</string>
    <string name="new_price_p95">Nowa cena benzyna</string>
    <string name="Hello">Dzien dobry</string>
    <string name="have_fun">:)</string>
    <string name="amount_of_your_points">Liczba punktow</string>
    <string name="nav_open">Otworz</string>
    <string name="nav_close">Zamknij</string>

</resources>