<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="198dp"
        tools:layout_editor_absoluteY="217dp"
        android:background="@drawable/road">

        <ImageView
            android:layout_width="91dp"
            android:layout_height="91dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@mipmap/gas_oil_petrol_station_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="132dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textViewIsLoggedInMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/TextToLogIn"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:backgroundTint="@color/grey"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logging"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/logging" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registering"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/registering" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>